fix:  Add extra margin to bottom of cf-section

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,6 +6,10 @@ body {
   padding-top: 1rem;
 }
 
+.cf-section {
+  margin-bottom: 96px;
+}
+
 #mobile-menu {
   margin-bottom: 1.5rem;
 }
